# growth-sandbox

./: .gitignore  .pre-commit-config.yaml  README.md  kerchoff_0D.py  kerchoff_cube.py  kerchoff_ellipsoid.py  pyproject.toml
examples/: lv_KOM.py  slab_KOM.py  slab_constant.py  slab_simple_strain.py  unit_cube_KOM.py  unit_cube_constant.py  unit_cube_simple_strain.py
src/growth/: __init__.py  models.py
src/growth_sandbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
